# kingdoms-game

./: CONTRIBUTING.md  Cargo.toml  LICENSE-ENGINE.md  LICENSE-MIT.md  README.md  app-8caa0b39e19e4c9f.js  app-8caa0b39e19e4c9f_bg.wasm  crash_report.txt  index.html  rust-toolchain.toml  rustc-ice-2025-11-23T15_17_24-276667.txt  rustc-ice-2025-11-24T13_16_08-16718.txt  rustc-ice-2025-11-24T13_27_37-18289.txt  rustc-ice-2025-11-24T13_28_11-18427.txt  rustc-ice-2025-11-24T13_31_03-18850.txt  strace.out
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs
client/src/app/: app.rs  app_actions.rs  appinfo.rs  crash_handler.rs  input_handler.rs  mod.rs  ui_state.rs
client/src/client/: chunk_mesh.rs  client.rs  client_chunk.rs  mesher.rs  mod.rs  packet_serializer.rs
config/: app_keys.json
engine_assets/: Cargo.toml
engine_assets/src/: block_properties.rs  block_registry.rs  colormap_registry.rs  engine_path.rs  layer_allocator.rs  lib.rs  main.rs  manifest.rs  misc.rs  projects.rs  rendering.rs
engine_core/: Cargo.toml
engine_core/src/: block_pos.rs  chunk_pos.rs  chunk_relative.rs  constants.rs  entity_pos.rs  lib.rs  paths.rs
engine_net/: Cargo.toml
engine_net/src/: client_actions.rs  client_packet.rs  lib.rs  player_data.rs  server_packet.rs
engine_render/: Cargo.toml
engine_render/shaders/: shader.wgsl
engine_render/src/: constants.rs  core.rs  gpu.rs  lib.rs  per_draw_data.rs  push_constants.rs  render_results.rs  renderer.rs  scene.rs  texture_manager.rs  vertex.rs
engine_settings/: Cargo.toml
engine_settings/src/client_config/: mesh_config.rs  mod.rs  push_constant_config.rs  render_config.rs
engine_world/: Cargo.toml
engine_world/src/: chunk.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  mod.rs  prioritized_job.rs  server.rs
shaders/: shader.wgsl
shared_utils/: Cargo.toml
shared_utils/src/: raycast.rs
src/: main.rs
src/client/: connection_details.rs  constants.rs  mod.rs
src/client/app/: app.rs  app_actions.rs  appinfo.rs  input_handler.rs  mod.rs  ui_state.rs
src/client/client/: chunk_mesh.rs  client.rs  client_actions.rs  client_chunk.rs  mesher.rs  mod.rs  packet_serializer.rs
src/client/client/config/: mesh_config.rs  push_constant_config.rs  render_config.rs
src/client/rendering/: app.rs  appinfo.rs  apprenderconfig.rs  chunk_mesh.rs  client_chunk.rs  core.rs  gpu.rs  mod.rs  render_results.rs  renderer.rs  texture_manager.rs  ui_state.rs  util.rs
src/client/shaders/: shader.wgsl
src/config/: client_keys.json
src/server/: constants.rs  mod.rs  prioritized_job.rs  server.rs
src/shared/: chunk.rs  constants.rs  mod.rs  render.rs  server_packet.rs
src/shared/communication/: client_packet.rs  mod.rs  player_data.rs  player_id.rs  server_packet.rs
src/shared/coordinate_systems/: block_pos.rs  chunk_pos.rs  chunk_relative.rs  entity_pos.rs  mod.rs
src/shared/render/: block_data.rs  block_data_render.rs  chunk_draw_call_info.rs  indirect.rs  mod.rs  per_draw_data.rs  push_constants.rs  vertex.rs
src/shared/traits/: mod.rs  world_inspector.rs
src/shared/util/: raycast.rs
