cargo-features = ["profile-rustflags", "codegen-backend"]

[package]
name = "app"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "app_core"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
egui = "0.33.0"
egui-wgpu = { version = "0.33.0", features = ["winit"] }
log = "0.4.28"
nalgebra-glm = { version = "0.20.0", features = [
    "convert-bytemuck",
    "serde-serialize",
] }
web-time = "1.1.0"
wgpu = { version = "27.0.1", default-features = false }
winit = "0.30.12"
env_logger = "0.11.8"
egui-winit = "0.33.0"
pollster = "0.4.0"
wgpu_buffer_allocator = "0.1.0"
rayon = "1.11.0"
arc-swap = "1.7.1"

[features]
default = ["wgpu/default"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[profile.dev]
strip = "debuginfo"
rustflags = ["-Z", "threads=8", "-C", "link-arg=-no-pie"]
codegen-units = 512
incremental = true
opt-level = 0
codegen-backend = "cranelift"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release-prof]
inherits = "release" 
debug = true
debug-assertions = false 
overflow-checks = false
rustflags = [
    "-C", "force-frame-pointers=yes",
]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
rustflags = [
    "-C", "link-arg=-Wl,--subsystem,console",
]
