cargo-features = ["profile-rustflags", "codegen-backend"]

[workspace]
members = [
    "client",
    "server",
    "engine_core",
    "engine_world",
    "engine_render",
    "engine_net",
    "engine_settings",
    "shared_utils",
    "engine_assets",
]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
egui = "0.33.0"
egui-wgpu = { version = "0.33.0", features = ["winit"] }
log = "0.4.28"
nalgebra-glm = { version = "0.20.0", features = [
    "convert-bytemuck",
    "serde-serialize",
] }
web-time = "1.1.0"
wgpu = { version = "27.0.1", default-features = false }
winit = { version = "0.30.12", features = ["serde"] }
env_logger = "0.11.8"
egui-winit = "0.33.0"
pollster = "0.4.0"
wgpu_buffer_allocator = "0.1.0"
rayon = "1.11.0"
arc-swap = "1.7.1"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.146"
rustc-hash = "2.1.1"
bincode = "1.3.3"
directories = "6.0.0"
image = "0.25.9"
toml = "1.0.2"

engine_core = { path = "engine_core" }
engine_net = { path = "engine_net" }
engine_render = { path = "engine_render" }
engine_world = { path = "engine_world" }
engine_settings = { path = "engine_settings" }
engine_server = { path = "server" }
shared_utils = { path = "shared_utils" }
engine_assets = { path = "engine_assets" }

[workspace.features]
default = ["wgpu/default"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[workspace.profile.dev]
strip = "debuginfo"
rustflags = ["-Z", "threads=8", "-C", "link-arg=-no-pie"]
codegen-units = 512
incremental = true
opt-level = 0
codegen-backend = "cranelift"

[workspace.profile.release]
lto = "fat"
codegen-units = 1

[workspace.profile.release-prof]
inherits = "release"
debug = true
debug-assertions = false
overflow-checks = false
rustflags = [
    "-C", "force-frame-pointers=yes",
]

[workspace.target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
rustflags = [
    "-C", "link-arg=-Wl,--subsystem,console",
]
