[package]
name = "engine_assets"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
rustc-hash = { workspace = true }
image = { workspace = true }
engine_core = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }
notify = "8.2.0"
dashmap = { version = "6.1.0", features = ["rayon"] }
walkdir = "2.5.0"
