[package]
name = "engine_assets"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
rustc-hash = { workspace = true }
image = { workspace = true }
engine_core = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }
notify = { workspace = true }
dashmap = { workspace = true }
walkdir = { workspace = true }
lasso = { workspace = true }
